--- a/seapirate.frontend/src/index.html
+++ b/seapirate.frontend/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SEAPIRATE - seamlessly executing analytics for pirate interceptions, raids, attacks and target earmarking</title>
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
